--- a/API.SystemDefinitions.Test/API.SystemDefinitions.Test.csproj
+++ b/API.SystemDefinitions.Test/API.SystemDefinitions.Test.csproj
@@ -15,13 +15,13 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Moq.AutoMock" Version="3.5.0-ci0498" />
+		<PackageReference Include="Moq.AutoMock" Version="3.5.0" />
 		<PackageReference Include="PolyhydraGames.Core.Test" Version="1.0.0.13" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 		<PackageReference Include="Moq" Version="4.20.70" />
 		<PackageReference Include="NUnit" Version="4.0.1" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-		<PackageReference Include="NUnit.Analyzers" Version="3.10.0">
+		<PackageReference Include="NUnit.Analyzers" Version="4.0.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
