--- a/API.SystemDefinitions.Test/API.SystemDefinitions.Test.csproj
+++ b/API.SystemDefinitions.Test/API.SystemDefinitions.Test.csproj
@@ -27,6 +27,10 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Api.SystemDefinitions\PolyhydraGames.Api.SystemDefinitions.csproj" />
+	</ItemGroup>
+
  
 
 </Project>
