--- a/Api.SystemDefinitions/PolyhydraGames.Api.SystemDefinitions.csproj
+++ b/Api.SystemDefinitions/PolyhydraGames.Api.SystemDefinitions.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="PolyhydraGames.Core.Interfaces.Gaming" Version="1.0.0.12" />
     <PackageReference Include="PolyhydraGames.Core.Models" Version="1.0.1.12" />
     <PackageReference Include="PolyhydraGames.Extensions" Version="2.1.1.57" />
+    <PackageReference Include="Spectre.Console" Version="0.51.1" />
   </ItemGroup>
 
 </Project>
